update module
